<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/margin_10dp"
    android:theme="@style/WhiteText">
    <android.support.design.widget.TextInputLayout
        android:layout_alignParentTop="true"
        android:id="@+id/textInputTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/white"
        android:background="@drawable/view_lines"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/EditText.White.Floating"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/iv_qr"
        android:layout_margin="@dimen/margin_5dp">

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/view_no_lines"
            android:gravity="center"
            android:hint="Address"
            android:paddingStart="@dimen/margin_5dp"
            android:paddingEnd="@dimen/margin_5dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/little_text12"
            android:inputType="textNoSuggestions"
            android:ellipsize="start"/>
    </android.support.design.widget.TextInputLayout>
    <ImageView
        android:id="@+id/iv_qr"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@mipmap/qr_code"
        android:layout_alignBottom="@+id/textInputTextLayout"
        android:layout_alignParentEnd="true" />
    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/textInputTextLayout"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:baselineAligned="false">
        <android.support.design.widget.TextInputLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            android:textColorHint="@android:color/white"
            android:background="@drawable/view_lines"
            android:layout_margin="@dimen/margin_5dp"
            app:hintTextAppearance="@style/EditText.White.Floating">
            <EditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/btc"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:textSize="@dimen/txt_size"
                android:inputType="number|numberDecimal"
                android:background="@drawable/view_no_lines" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin_5dp"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            android:background="@drawable/view_lines"
            android:textColorHint="@android:color/white"
            app:hintTextAppearance="@style/EditText.White.Floating">

            <EditText
                android:id="@+id/et_amount_fiat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/view_no_lines"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:hint="@string/aud"
                android:textSize="@dimen/txt_size"
                android:inputType="number|numberDecimal" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear_layout"
        android:id="@+id/linear_layout2"
        android:layout_marginBottom="@dimen/margin_10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/max_spendable"
            android:gravity="end"
            android:layout_marginEnd="@dimen/margin_10dp"/>

        <TextView
            android:id="@+id/tv_max_expendable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/max_spendable" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear_layout2"
        android:layout_marginBottom="@dimen/margin_10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fee"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/margin_5dp"/>
        <TextView
            android:id="@+id/tv_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/margin_5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semi_equal"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/margin_5dp"/>
        <TextView
            android:id="@+id/tv_fee_fiat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear_layout4"
        android:layout_marginBottom="@dimen/margin_10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/margin_5dp"/>
        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/margin_5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semi_equal"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/margin_5dp"/>
        <TextView
            android:id="@+id/tv_total_fiat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout3"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_margin="@dimen/margin_5dp"
        android:layout_height="wrap_content"
        android:id="@+id/bt_send"
        android:textColor="@android:color/black"
        android:layout_below="@+id/ll_camera"
        android:layout_centerHorizontal="true"
        android:text="@string/send"/>
</RelativeLayout>